Carrito de compra y creacion de pedido con actualizacion de inventario

--- a/Pedidos/Pedidos.csproj
+++ b/Pedidos/Pedidos.csproj
@@ -53,6 +53,8 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\DetallePedido.cs" />
+    <Compile Include="Models\Pedido.cs" />
     <Compile Include="Models\Productos.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
