--- a/Pedidos/Pedidos.csproj
+++ b/Pedidos/Pedidos.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DetalleFrm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DetalleFrm.Designer.cs">
+      <DependentUpon>DetalleFrm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -59,6 +65,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\Conexion.cs" />
+    <EmbeddedResource Include="DetalleFrm.resx">
+      <DependentUpon>DetalleFrm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
