Corrigiendo errores y agregando script y backup de la base

--- a/Pedidos/Pedidos.csproj
+++ b/Pedidos/Pedidos.csproj
@@ -101,6 +101,7 @@
     <None Include="Resources\hack.gif" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Resources\pedidos.bak" />
     <None Include="Resources\shut.gif" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
